update util